src/FinancialForce Accounting/objects/fferpcore__BillingDocument__c.object
<CustomObject>
    <fields>
        <fullName>MatchType__c</fullName>
        <description>Match Type of the FinancialForce Accounting transaction to which this billing document relates.</description>
        <formula>TEXT(Transaction__r.MatchType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Match Type of the FinancialForce Accounting transaction to which this billing document relates.</inlineHelpText>
        <label>Match Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OutstandingValue__c</fullName>
        <description>Outstanding Value of the FinancialForce Accounting transaction to which this billing document relates.</description>
        <formula>Transaction__r.DocumentOutstandingTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Outstanding Value of the FinancialForce Accounting transaction to which this billing document relates.</inlineHelpText>
        <label>Outstanding Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PaymentStatus__c</fullName>
        <description>Transaction Payment Status of the FinancialForce Accounting transaction to which this billing document relates.</description>
        <formula>if(OR(NOT(ISPICKVAL(fferpcore__DocumentStatus__c, &apos;Complete&apos;)),
      NOT(ISPICKVAL(PostingStatus__c, &apos;Posted&apos;))),
&apos;Not Applicable&apos;,

if(Transaction__r.DocumentOutstandingTotal__c == 0, &apos;Paid&apos;,

if(Transaction__r.DocumentTotal__c == Transaction__r.DocumentOutstandingTotal__c, &apos;Unpaid&apos;,

&apos;Part Paid&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Transaction Payment Status of the FinancialForce Accounting transaction to which this billing document relates.</inlineHelpText>
        <label>Payment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostingError__c</fullName>
        <description>Error that occurred while posting this billing document.</description>
        <inlineHelpText>Error that occurred while posting this billing document.</inlineHelpText>
        <label>Posting Error</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PostingStatus__c</fullName>
        <description>Posting status for this billing document.</description>
        <inlineHelpText>Posting status for this billing document.</inlineHelpText>
        <label>Posting Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Posting</fullName>
                </value>
                <value>
                    <fullName>Posted</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the FinancialForce Accounting transaction to which this billing document relates.</description>
        <inlineHelpText>Lookup to the FinancialForce Accounting transaction to which this billing document relates.</inlineHelpText>
        <label>Accounting Transaction</label>
        <referenceTo>codaTransaction__c</referenceTo>
        <relationshipLabel>Billing Document</relationshipLabel>
        <relationshipName>BillingDocument</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>FinancialForce Accounting year to which this billing document relates.</description>
        <formula>Transaction__r.Period__r.YearName__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>FinancialForce Accounting year to which this billing document relates.</inlineHelpText>
        <label>Year</label>
        <type>Text</type>
    </fields>
</CustomObject>